syntax = "proto3";

package rssflow.node;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

service NodeService {
  rpc Process(ProcessRequest) returns (ProcessResponse);

  rpc Ping(PingRequest) returns (PingResponse);
}

message ProcessRequest {
  google.protobuf.Any payload = 1;
  google.protobuf.Struct options = 2;
}

message ProcessResponse {
  google.protobuf.Any payload = 1;
}

enum Field {
  Author = 0;
  Summary = 1;
  Content = 2;
  Title = 3;
}

// Metadata for a node service
message NodeMeta {
  string address = 1;
  string node_name = 3;
}

message PingRequest {}

message PingResponse {
  NodeMeta node = 1;
}